# diamond

./: .env.example  .gitignore  FAIL_REPORT.md  PHASE_3_ROADMAP.md  README.md  claude.md  dashboard.py  gemini.md  pyproject.toml  run_backtest.py  run_paper.py  spec.md
.github/workflows/: ci.yml
research/: STRATEGY_EVOLUTION.md  bot_performance_report.md  gemini_feedback_and_current_stage.md  gemini_frontend_prompt.md  polymarket_5min.md  revitalization_prompt.md
scripts/: check_env.py  download_data.py
src/: config.py  dashboard_api.py  execution.py  fastlane_bundle.py  fee_optimizer.py  iv_engine.py  latency_benchmark.py  log_engine.py  market_calibration.py  mock_executor.py  oracle_monitor.py  paper_strategy.py  paper_trader.py  paper_trading.py  polymarket_feed.py  polymarket_wss.py  pricing.py  risk.py  strategy.py  v3_strategy.py  ws_manager.py
tests/: guardian_v4_integrity.py  latency_stress_test.py  test_fee_optimizer.py  test_harness.py  test_hft_staleness.py  test_iv_engine.py  test_latency_benchmark.py  test_market_calibration.py  test_oracle_monitor.py  test_paper_strategy.py  test_paper_trading.py  test_pricing.py  test_risk.py  test_strategy.py  test_ws_manager.py  test_wss_actor.py  verify_env.py
