[project]
name = "diamond"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nautilus-trader>=1.222.0",
    "scipy>=1.17.0",
    "websockets>=14.0",
    "py-clob-client>=0.34.0",
    "requests>=2.32.0",
    "eth-abi>=4.0.0",
    "eth-keys>=0.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.151.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
